# realtime-shadows

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/shaders/: base.ps.hlsl  base.vs.hlsl
src/: CMakeLists.txt
src/baseShadowApp/: CMakeLists.txt  D3DClass.cc  D3DClass.h  baseShadowApp.cc  baseShadowApp.h  main.cc  rtsp_utils.h
src/common/: obj_loader.h
tools/: compile_shaders.pl
